Test_Try/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country1__c</fullName>
        <label>Country1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_of_Contact__c</fullName>
        <label>Role of Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_Number1__c</fullName>
        <label>SSN Number1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_Number__c</fullName>
        <label>SSN Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LeadWEB_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(
 ISPICKVAL( LeadSource  , &apos;WEB&apos;) , ISPICKVAL( Contact_Type__c, &apos;Email&apos;)), ISBLANK( Email ) )</errorConditionFormula>
        <errorMessage>E mail field is missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_source_cant_Change_from_web_to_refa</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(LeadSource , &apos;Partner referral&apos;) , ISPICKVAL( PRIORVALUE( LeadSource ) , &apos;WEB&apos;) )</errorConditionFormula>
        <errorMessage>Lead source can&quot;t be changed from Web to Partner Referal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_mandatory</fullName>
        <active>true</active>
        <description>Phone is Mandatory when contact to Type is Phone.</description>
        <errorConditionFormula>AND( 
     OR(
        ISPICKVAL( LeadSource , &apos;Phone Inquiry&apos;) ,
        ISPICKVAL( Contact_Type__c , &apos;Phone&apos;) ),
    ISBLANK( Phone ))</errorConditionFormula>
        <errorMessage>Phone Number is Mandatory when Contact Type is Phone Or</errorMessage>
    </validationRules>
</CustomObject>